updated docs and benches

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "object-pool"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["CJP10"]
 edition = "2018"
 description = "A thread-safe object pool with automatic return and attach/detach semantics"
@@ -12,8 +12,13 @@ keywords = ["atomic", "garbage", "non-blocking", "lock-free"]
 categories = ["concurrency", "memory-management", "data-structures"]
 license = "MIT/Apache-2.0"
 
-[dependencies]
-replace_with = "0.1"
+[dev-dependencies]
+criterion = "0.2"
+criterion-plot = "0.3"
+
+[[bench]]
+name = "bench"
+harness = false
 
 [profile.release]
 debug = true
