--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ license = "MIT/Apache-2.0"
 [dependencies]
 parking_lot = "0.12.3"
 
+[target.'cfg(loom)'.dependencies]
+loom = "0.7"
+
 [dev-dependencies]
 criterion = "0.5.1"
 criterion-plot = "0.5.0"
